--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_default"
@@ -8,12 +9,123 @@
     android:paddingRight="13dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/iv_head"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
         android:layout_gravity="right"
+        android:layout_marginTop="15dp"
         android:src="@mipmap/img_head_n" />
 
-    <include layout="@layout/fragment_tool_bar" />
+    <!--<include layout="@layout/fragment_tool_bar" />-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3H翡翠商城"
+        android:textColor="@color/text_black"
+        android:textSize="24sp"
+        />
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
 
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:layout_alignParentBottom="true"
+                android:clipToPadding="false"
+                android:paddingEnd="48dp"
+                android:paddingLeft="48dp"
+                android:paddingRight="48dp"
+                android:paddingStart="48dp">
+
+            </android.support.v4.view.ViewPager>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="27dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.flyco.tablayout.SlidingTabLayout
+                        android:id="@+id/slidingTabLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:tl_tab_space_equal="true"
+                        app:tl_textSelectColor="@color/colorMain"
+                        app:tl_textUnselectColor="@color/text_black"
+                        app:tl_textsize="15sp"
+                        app:tl_underline_gravity="BOTTOM"
+                        app:tl_underline_height="1dp" />
+
+                    <TextView
+                        android:id="@+id/tv_filtrate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:drawablePadding="4dp"
+                        android:drawableRight="@mipmap/btn_down_n"
+                        android:text="筛选"
+                        android:textColor="@color/colorMain"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_filtrate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:visibility="gone"
+                    >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="价格"
+                        android:textColor="@drawable/selector_green"
+                        android:textSize="@dimen/sp_12" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:text="热度"
+                        android:textColor="@drawable/selector_green"
+                        android:textSize="@dimen/sp_12" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:text="最新"
+                        android:textColor="@drawable/selector_green"
+                        android:textSize="@dimen/sp_12" />
+
+
+                </LinearLayout>
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/viewPagergGoods"
+                    android:layout_width="match_parent"
+                    android:layout_height="324dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginTop="24dp" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
