--- a/baseUiLibrary/src/main/res/layout/fragment_tool_bar.xml
+++ b/baseUiLibrary/src/main/res/layout/fragment_tool_bar.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolBar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="44dp"
     android:background="@android:color/white"
     android:gravity="center_vertical"
     >
