--- a/app/src/main/res/layout/activity_result_goods.xml
+++ b/app/src/main/res/layout/activity_result_goods.xml
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_default">
-
+    android:background="@color/white_default"
+    android:orientation="vertical"
+    >
+    <ImageView
+        android:id="@+id/iv_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/global_btn_return"
+        android:padding="16dp"
+        />
+    <TextView
+        android:id="@+id/tv_head"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="翡翠绿"
+        android:textSize="@dimen/sp_24"
+        android:textColor="@color/text_black"
+        android:layout_marginLeft="16dp"
+        />
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="324dp"
+            android:layout_height="match_parent"
             android:background="@color/white_default"
-            app:cardCornerRadius="10dp"
+            app:cardCornerRadius="15dp"
             app:cardElevation="3dp"
             app:cardMaxElevation="3dp"
-            app:cardUseCompatPadding="true">
-
+            >
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
@@ -26,6 +43,4 @@
                 android:paddingTop="14dp" />
         </android.support.v7.widget.CardView>
     </android.support.v4.widget.SwipeRefreshLayout>
-
-
-</RelativeLayout>
+</LinearLayout>
