--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -92,26 +92,29 @@
                     >
 
                     <TextView
+                        android:id="@+id/tv_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="价格"
-                        android:textColor="@drawable/selector_green"
+                        android:textColor="@color/text_black"
                         android:textSize="@dimen/sp_12" />
 
                     <TextView
+                        android:id="@+id/tv_hot"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:text="热度"
-                        android:textColor="@drawable/selector_green"
+                        android:textColor="@color/text_black"
                         android:textSize="@dimen/sp_12" />
 
                     <TextView
+                        android:id="@+id/tv_newest"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:text="最新"
-                        android:textColor="@drawable/selector_green"
+                        android:textColor="@color/text_black"
                         android:textSize="@dimen/sp_12" />
 
 
