--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="9dp"
+    android:foreground="?attr/selectableItemBackground"
+    android:background="@drawable/selector_white"
     >
 
     <android.support.v7.widget.CardView
@@ -35,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/text_black"
-            android:textSize="@dimen/sp_15"
+            android:textSize="@dimen/sp_14"
             tools:text="糯冰种飘翠福瓜挂件" />
 
         <TextView
@@ -44,14 +46,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:textColor="@color/text_gray_goods"
-            android:textSize="@dimen/sp_15"
+            android:textSize="@dimen/sp_14"
             tools:text="ACS322332" />
 
         <TextView
             android:id="@+id/tv_goodsPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_17"
+            android:textSize="@dimen/sp_16"
             android:layout_marginTop="18dp"
             android:textColor="@color/text_red"
             tools:text="￥3980.00" />
