--- a/baseResLibrary/src/main/res/values/styles.xml
+++ b/baseResLibrary/src/main/res/values/styles.xml
@@ -5,8 +5,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">44dp</item>
         <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/selector_green_22</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/sp_16</item>
     </style>
     <!--灰色横线样式-->
     <style name="LineGray">
