--- a/baseUiLibrary/src/main/res/layout/fragment_tool_bar.xml
+++ b/baseUiLibrary/src/main/res/layout/fragment_tool_bar.xml
@@ -3,16 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolBar"
     android:layout_width="match_parent"
-    android:layout_height="44dp"
+    android:layout_height="wrap_content"
     android:background="@android:color/white"
-    android:gravity="center_vertical"
     >
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/text_black"
-        android:textSize="24sp"
-        tools:text="标题" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iv_head"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="13dp"
+            android:layout_gravity="right"
+            android:src="@mipmap/img_head_n" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_black"
+            android:textSize="24sp"
+            tools:text="标题" />
+    </LinearLayout>
+
+
 
 </android.support.v7.widget.Toolbar>
