--- a/app/src/main/res/layout/item_live_hot.xml
+++ b/app/src/main/res/layout/item_live_hot.xml
@@ -43,7 +43,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginTop="8dp"
             tools:text="如果你无法简洁的表达你的想法，那只说明你还不够了解它。"
-            android:textColor="@color/text_gray_goods"
+            android:textColor="@color/text_gray2"
             android:textSize="@dimen/sp_12" />
 
         <TextView
@@ -52,7 +52,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginTop="15dp"
             android:text="直播时间:"
-            android:textColor="@color/text_gray_goods"
+            android:textColor="@color/text_gray2"
             android:textSize="@dimen/sp_12" />
 
         <TextView
@@ -63,7 +63,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginTop="2dp"
             tools:text="2018-11-23 12:11 ~ 12:20"
-            android:textColor="@color/text_gray_goods"
+            android:textColor="@color/text_gray2"
             android:textSize="@dimen/sp_12" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
