--- a/baseResLibrary/src/main/res/menu/navigation_main.xml
+++ b/baseResLibrary/src/main/res/menu/navigation_main.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
+    <mItem
         android:id="@+id/item0"
         android:icon="@drawable/selector_home_menu_0"
         android:title="首页" />
-    <item
+    <mItem
         android:id="@+id/item1"
         android:icon="@drawable/selector_home_menu_1"
         android:title="直播" />
-    <item
+    <mItem
         android:id="@+id/item2"
         android:icon="@drawable/selector_home_menu_2"
         android:title="搜索" />
-    <item
+    <mItem
         android:id="@+id/item3"
         android:icon="@drawable/selector_home_menu_3"
         android:title="购物袋" />
-    <item
+    <mItem
         android:id="@+id/item4"
         android:icon="@drawable/selector_home_menu_4"
         android:title="个人中心" />
