--- a/app/src/main/res/layout/activity_result_goods.xml
+++ b/app/src/main/res/layout/activity_result_goods.xml
@@ -13,6 +13,7 @@
         android:src="@mipmap/global_btn_return"
         android:padding="16dp"
         />
+
     <TextView
         android:id="@+id/tv_head"
         android:layout_width="wrap_content"
@@ -22,10 +23,15 @@
         android:textColor="@color/text_black"
         android:layout_marginLeft="16dp"
         />
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+
+<android.support.v4.widget.SwipeRefreshLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="140dp"
+    >
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -34,6 +40,7 @@
             app:cardCornerRadius="15dp"
             app:cardElevation="3dp"
             app:cardMaxElevation="3dp"
+            app:cardUseCompatPadding="true"
             >
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
@@ -42,5 +49,6 @@
                 android:paddingLeft="14dp"
                 android:paddingTop="14dp" />
         </android.support.v7.widget.CardView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
