--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textColor="@color/text_gray_goods"
+            android:textColor="@color/text_gray2"
             android:textSize="@dimen/sp_14"
             tools:text="ACS322332" />
 
