--- a/app/src/main/res/layout/item_live_recommend.xml
+++ b/app/src/main/res/layout/item_live_recommend.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textColor="@color/text_gray_goods"
+            android:textColor="@color/text_gray2"
             tools:textSize="@dimen/sp_12"
             tools:text="2018-11-23 12:11 ~ 12:20" />
 
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
-            android:textColor="@color/text_gray_goods"
+            android:textColor="@color/text_gray2"
             android:textSize="@dimen/sp_12"
             tools:text="如果你无法简洁的表达你的想法，那只说明你还不够了解它。" />
 
