--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@android:color/white</item>
-        <item name="colorPrimaryDark">@android:color/white</item>
-        <item name="colorAccent">@color/colorMain</item>
+        <mItem name="colorPrimary">@android:color/white</mItem>
+        <mItem name="colorPrimaryDark">@android:color/white</mItem>
+        <mItem name="colorAccent">@color/colorMain</mItem>
 
     </style>
 
