--- a/baseResLibrary/src/main/res/drawable/selector_home_menu_3.xml
+++ b/baseResLibrary/src/main/res/drawable/selector_home_menu_3.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/bnt_bag_fill_s" android:state_checked="true" />
-    <item android:drawable="@mipmap/bnt_bag_n" android:state_checked="false" />
+    <mItem android:drawable="@mipmap/bnt_bag_fill_s" android:state_checked="true" />
+    <mItem android:drawable="@mipmap/bnt_bag_n" android:state_checked="false" />
 </selector>
