--- a/baseResLibrary/src/main/res/drawable/selector_tv_color.xml
+++ b/baseResLibrary/src/main/res/drawable/selector_tv_color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <mItem android:state_pressed="true" android:color="@color/colorMain"/>
-    <mItem android:state_pressed="false" android:color="@color/text_black"/>
+    <item android:state_pressed="true" android:color="@color/colorMain"/>
+    <item android:state_pressed="false" android:color="@color/text_black"/>
 
 </selector>
