--- a/baseResLibrary/src/main/res/values/styles.xml
+++ b/baseResLibrary/src/main/res/values/styles.xml
@@ -2,23 +2,23 @@
 <resources>
     <!-- 主按钮样式 -->
     <style name="ButtonPrimary" parent="Widget.AppCompat.Button">
-        <mItem name="android:layout_width">match_parent</mItem>
-        <mItem name="android:layout_height">44dp</mItem>
-        <mItem name="android:gravity">center</mItem>
-        <mItem name="android:background">@drawable/selector_green_22</mItem>
-        <mItem name="android:textColor">@android:color/white</mItem>
-        <mItem name="android:textSize">@dimen/sp_16</mItem>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">44dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/selector_green_22</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/sp_16</item>
     </style>
     <!--灰色横线样式-->
     <style name="LineGray">
-        <mItem name="android:layout_width">match_parent</mItem>
-        <mItem name="android:layout_height">0.5dp</mItem>
-        <mItem name="android:background">@color/line_gray</mItem>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">@color/line_gray</item>
     </style>
     <!--星星评分等级-->
     <style name="RatingStyle">
-        <mItem name="android:minHeight">12dp</mItem>
-        <mItem name="android:maxHeight">12dp</mItem>
+        <item name="android:minHeight">12dp</item>
+        <item name="android:maxHeight">12dp</item>
     </style>
 
 </resources>
