--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,12 @@
     <color name="red_E6162D">#E6162D</color>
     <color name="black_000000">#000000</color>
     <color name="black_333333">#333333</color>
+    <color name="black_444444">#7A7A7A</color>
+    <color name="black_666666">#666666</color>
     <color name="line_C8C7CC">#C8C7CC</color>
     <color name="bg_EFEFF4">#EFEFF4</color>
     <color name="blue_0006FF">#0006FF</color>
     <color name="white_default">#FFFFFF</color>
     <color name="gray_EFEFF4">#EFEFF4</color>
+    <color name="color3078EF">#3078EF</color>
 </resources>
