--- a/app/src/main/res/layout/activity_not_review_order.xml
+++ b/app/src/main/res/layout/activity_not_review_order.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_default">
+    android:background="@color/white_default"
+    android:orientation="vertical">
     <include layout="@layout/item_title"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -12,7 +13,6 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="14dp"
             android:paddingBottom="14dp" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
