--- a/app/src/main/res/layout/item_allorder.xml
+++ b/app/src/main/res/layout/item_allorder.xml
@@ -4,13 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/bg_EFEFF4">
+    android:background="@color/white_default">
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/dp_13"
-        android:layout_marginRight="@dimen/dp_13"
         android:layout_marginTop="@dimen/dp_13"
         app:cardCornerRadius="5dp">
     <RelativeLayout
