--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="black_333333">#333333</color>
     <color name="black_444444">#7A7A7A</color>
     <color name="black_666666">#666666</color>
+    <color name="black_0B0827">#0B0827</color>
     <color name="line_C8C7CC">#C8C7CC</color>
     <color name="bg_EFEFF4">#EFEFF4</color>
     <color name="blue_0006FF">#0006FF</color>
