--- a/app/src/main/res/layout/fragment_personl.xml
+++ b/app/src/main/res/layout/fragment_personl.xml
@@ -20,6 +20,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/iv_message"
                     android:layout_width="34dp"
                     android:layout_height="34dp"
                     android:layout_gravity="right"
