--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,24 @@
         <item name="android:layout_height">0.5dp</item>
         <item name="android:background">@color/line_C8C7CC</item>
     </style>
+    <!--弹出对话框样式基类-->
+    <style name="dialog_style" parent="Theme.AppCompat.Dialog">
+        <!--<item name="android:windowAnimationStyle">@style/AnimBottom</item>-->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:background">#00000000</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+    <style name="AnimBottom" parent="@android:style/Animation">
+        <item name="android:windowEnterAnimation">@anim/translate_in</item>
+        <item name="android:windowExitAnimation">@anim/translate_out</item>
+    </style>
+
+    <!--选择对话框样式 从下向上-->
+    <style name="bottom_to_top_dialog_style" parent="dialog_style">
+        <item name="android:windowAnimationStyle">@style/AnimBottom</item>
+    </style>
 </resources>
