--- a/app/src/main/res/layout/fragment_personl.xml
+++ b/app/src/main/res/layout/fragment_personl.xml
@@ -73,6 +73,7 @@
                         android:textSize="@dimen/sp_16" />
 
                     <ImageView
+                        android:id="@+id/iv_setting"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
