--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -4,14 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_default">
-
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="324dp"
+            android:layout_height="match_parent"
             android:background="@color/white_default"
             app:cardCornerRadius="15dp"
             app:cardElevation="3dp"
