--- a/app/src/main/res/layout/activity_pick_goods.xml
+++ b/app/src/main/res/layout/activity_pick_goods.xml
@@ -8,6 +8,8 @@
     android:background="@color/white_default"
     tools:context=".ui.Personal.activity.PickGoodsActivity">
     <include layout="@layout/item_title"/>
+    <include layout="@layout/item_loading"
+        android:id="@+id/loading"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,6 +21,7 @@
         android:textColor="@color/black_333333"
         android:layout_marginLeft="@dimen/dp_14"/>
     <RelativeLayout
+        android:id="@+id/rl_address"
         android:layout_width="match_parent"
         android:layout_height="104dp"
         android:orientation="vertical"
@@ -174,10 +177,10 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
     <TextView
-        android:id="@+id/tv_img"
+        android:id="@+id/tv_pay"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:text="查看产品图片"
+        android:text="立即支付"
         android:textColor="@color/black_333333"
         android:textSize="@dimen/sp_13"
         android:gravity="center"
