--- a/app/src/main/res/layout/item_emeralds_detail.xml
+++ b/app/src/main/res/layout/item_emeralds_detail.xml
@@ -7,9 +7,10 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true">
         <TextView
+            android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="积分资产"
+            android:text="2018-12-12"
             android:textColor="@color/black_333333"
             android:gravity="center"
             android:layout_centerVertical="true"
