--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -12,10 +12,9 @@
             android:layout_height="wrap_content"
             android:background="@color/white_default"
             app:cardCornerRadius="15dp"
-            app:cardElevation="3dp"
-            app:cardMaxElevation="3dp"
             app:cardUseCompatPadding="true"
             android:descendantFocusability="blocksDescendants"
+            android:layout_margin="@dimen/dp_13"
             >
 
             <android.support.v7.widget.RecyclerView
