--- a/app/src/main/res/layout/fragment_personl.xml
+++ b/app/src/main/res/layout/fragment_personl.xml
@@ -8,8 +8,31 @@
         android:id="@+id/view_login"/>
     <include layout="@layout/item_loading"
         android:id="@+id/loading"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/iv_message"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="14dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/ic_message_n" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_black"
+            android:textSize="@dimen/sp_17"
+            android:text="标题"
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
 
-        <ScrollView
+
+    </RelativeLayout>
+
+        <android.support.v4.widget.NestedScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -20,14 +43,6 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/iv_message"
-                    android:layout_width="34dp"
-                    android:layout_height="34dp"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="14dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/ic_message_n" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -159,7 +174,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-        </ScrollView>
+        </android.support.v4.widget.NestedScrollView>
 
 
 
