--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,6 +10,25 @@
     <include
         android:id="@+id/tv_head"
         layout="@layout/fragment_tool_bar" />
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_black"
+                android:textSize="@dimen/sp_17"
+                android:text="标题"
+                android:visibility="gone"
+                android:layout_centerInParent="true"/>
 
     <EditText
         android:id="@+id/et_search"
@@ -74,4 +93,6 @@
         android:layout_marginLeft="18dp"
         android:layout_marginTop="20dp"
         />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
