--- a/app/src/main/res/layout/fragment_tool_bar.xml
+++ b/app/src/main/res/layout/fragment_tool_bar.xml
@@ -6,10 +6,9 @@
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         >
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_head"
@@ -17,16 +16,18 @@
             android:layout_height="34dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="13dp"
-            android:layout_gravity="right"
+            android:layout_alignParentRight="true"
             android:src="@mipmap/img_head_n" />
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/text_black"
-            android:textSize="24sp"
-            tools:text="标题" />
-    </LinearLayout>
+            android:textSize="@dimen/sp_17"
+            tools:text="标题"
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
 
 
 
