--- a/app/src/main/res/layout/activity_im_order.xml
+++ b/app/src/main/res/layout/activity_im_order.xml
@@ -58,7 +58,8 @@
                 android:textColor="@color/black_0B0827"
                 android:textSize="@dimen/sp_14"
                 android:layout_marginLeft="@dimen/dp_13"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:visibility="gone"/>
             <TextView
                 android:id="@+id/tv_zhibo"
                 android:layout_width="wrap_content"
@@ -67,7 +68,8 @@
                 android:textColor="@color/black_0B0827"
                 android:textSize="@dimen/sp_14"
                 android:layout_marginLeft="@dimen/dp_13"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:visibility="gone"/>
             <TextView
                 android:id="@+id/tv_cun"
                 android:layout_width="wrap_content"
@@ -76,7 +78,8 @@
                 android:textColor="@color/black_0B0827"
                 android:textSize="@dimen/sp_14"
                 android:layout_marginLeft="@dimen/dp_13"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:visibility="gone"/>
             <TextView
                 android:id="@+id/tv_wuliu"
                 android:layout_width="match_parent"
@@ -176,6 +179,7 @@
             android:layout_alignParentRight="true"
             android:gravity="center"/>
     </RelativeLayout>
-
+     <include layout="@layout/item_loading"
+        android:id="@+id/loading"/>
 
 </RelativeLayout>
