--- a/app/src/main/res/layout/activity_team_two.xml
+++ b/app/src/main/res/layout/activity_team_two.xml
@@ -7,6 +7,9 @@
     android:orientation="vertical"
     tools:context=".ui.Personal.activity.TeamTwoActivity">
     <include layout="@layout/item_title"/>
+    <include layout="@layout/item_loading"
+        android:id="@+id/loading"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
