--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -5,6 +5,10 @@
     android:layout_height="wrap_content"
     android:background="@color/white_default"
     android:id="@+id/swipeRefreshLayout">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
         <android.support.v7.widget.CardView
@@ -14,18 +18,14 @@
             app:cardCornerRadius="15dp"
             app:cardUseCompatPadding="true"
             android:descendantFocusability="blocksDescendants"
-            android:layout_margin="@dimen/dp_13"
-            >
-
-            <android.support.v7.widget.RecyclerView
+            android:layout_margin="@dimen/dp_13">
+    <android.support.v7.widget.RecyclerView
                 android:overScrollMode="never"
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="14dp"
-                android:paddingTop="14dp" />
+                android:paddingTop="14dp"/>
         </android.support.v7.widget.CardView>
-
-
-
+    </LinearLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
