--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -21,13 +21,12 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_title"
+                android:id="@+id/tv_titles"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/text_black"
                 android:textSize="@dimen/sp_17"
-                android:text="标题"
-                android:visibility="gone"
+                android:text="搜索"
                 android:layout_centerInParent="true"/>
 
     <EditText
